--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -1,6 +1,12 @@
 name: Windows Release (Axmol)
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Release tag (e.g. v1.0.0)"
+        required: true
+        default: "v0.0.0"
   push:
     tags:
       - "v*"
@@ -54,8 +60,19 @@ jobs:
             -Path build_x64\RelWithDebInfo\* `
             -DestinationPath dist\OpenGD-Windows-x64.zip
 
+      # Create tag only when manually triggered
+      - name: Create git tag (manual runs only)
+        if: github.event_name == 'workflow_dispatch'
+        shell: pwsh
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag ${{ inputs.tag }}
+          git push origin ${{ inputs.tag }}
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.event.inputs.tag || github.ref_name }}
           files: dist/OpenGD-Windows-x64.zip
           generate_release_notes: true
